--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,29 @@
     padding: 0;
 }
 
+.red-b{
+    border: 1px solid red;
+}
+
 body{
     font-family: 'roboto', sans-serif;
+    max-width: 1440px;
+    min-width: 300px;
+}
+
+.container{
+    width: 100%;
+}
+
+header{
+    width: 100%;
+    height: 60px;
+    padding: 15px;
+    text-align: center;
+}
+
+.booking{
+    display: flex;
+    flex-direction: column;
+
 }
