--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,61 +1,198 @@
-@import'../css/normalize.css';
+@import "../css/normalize.css";
 
 // reset
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.red-b{
-    border: 1px solid red;
+// variables
+
+$color-primary: #9356dc;
+$color-secondary: #ff79da;
+$color-new: #99e2d0;
+$color-bg-dark:#ebebea;
+$color-bg-light:#f7f6f7;
+
+// mixins
+
+@mixin title {
+    font-weight: bold;
+    font-size: 1.5rem;
+    padding: 1rem; 
 }
 
-.container{
-    width: 100%;
-    max-width: 1440px;
-    min-width: 300px;
+
+body,
+html {
+  font-family: "roboto", sans-serif;
 }
 
-header{
-    width: 100%;
-    height: 60px;
-    padding: 15px;
-    text-align: center;
+.red-b {
+  border: 1px solid red;
 }
 
-.booking{
+.container {
+  width: 100%;
+  max-width: 1440px;
+  min-width: 320px;
+}
+
+header {
+  width: 100%;
+  height: 60px;
+  padding: 15px;
+  text-align: center;
+  font-family: 'shrikhand';
+  font-size: 2rem;
+}
+
+.booking {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  &__location {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $color-bg-dark;
+    padding: 1rem;
+    font-size: 1rem;
+    & p {
+      padding-right: 50px;
+      font-weight: bold;
+    }
+
+    & .fas {
+      padding-right: 1rem;
+    }
+  }
+
+  &__search {
     display: flex;
     flex-direction: column;
-    text-align: center;
-    &__location{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #f2f2f2;
+    background-color: $color-bg-light;
+    padding: 2rem;
+    align-items: center;
 
-        & p{
-            padding-right:50px;
-            font-weight: bold;
-        }
-
-        & .fas{
-            padding-right:20px;
-        }
-
+    & p:nth-child(1) {
+      @include title;
+      padding-bottom: 1rem;
     }
-
-    &__search{
-        display: flex;
-        flex-direction: column;
-        
-        & p:nth-child(1){  
-            font-weight: bold;
-            font-size: 2rem;
-            
-        }
+    & p:nth-child(2) {
+      padding-bottom: 1rem;
+      color: #353434;
+      padding-bottom: 1rem;
     }
-
-    
-    
+    & button {
+      width: 220px;
+      padding: 1rem;
+      margin: 1rem;
+      border: none;
+      color: #fff;
+      border-radius: 100px;
+      background: linear-gradient(
+        0deg,
+        rgba(147, 86, 220, 1) 0%,
+        rgba(255, 121, 218, 1) 100%
+      );
+    }
+  }
 }
 
+.function {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  & p:nth-child(1) {
+  @include title;
+    margin-left: -9rem;
+  }
+  &__choice {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    margin: 1rem;
+    position: relative;
+    width: 300px;
+    height: 80px;
+    border-radius: 20px;
+    // border: 1px solid #000;
+    background: $color-bg-light;
+    box-shadow: 5px 5px 10px $color-bg-dark;
+    & span {
+      display: inline-flex;
+      position: absolute;
+      width: 26px;
+      height: 26px;
+      border-radius: 50%;
+      background-color: $color-primary;
+      justify-content: center;
+      align-items: center;
+      left: -13px;
+      transform: translate(50% 50%);
+      color: #fff;
+    }
+    & .icone{
+        margin-right: 2rem;
+        font-size: 1.2rem;
+        opacity: .6;
+    }
+    & p{
+        font-weight: bold;
+    }
+
+  }
+}
+
+.local{
+    
+    margin-top: 2rem;
+    padding-top: 2rem;
+    background: $color-bg-light;
+    width: 100%;
+    & p:nth-child(1){
+      @include title;
+    }
+    &__container{
+
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &__card {
+        width: 300px;
+        height: 250px;
+        margin: 10px;
+        & a{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            // margin: 15px;
+        }
+        a &-image {
+          height: 180px;
+            width: 100%;
+            & img{
+              width: 100%;
+              object-fit: cover;
+            
+            }
+        }
+
+        a &-info{
+            height: 70px;
+            width: 100%;
+        }
+      
+    }
+    }
+
+
+
+}
