page d'acceuil entieremen refaite et terminée

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,6 @@ body,
 html {
   font-family: "roboto", sans-serif;
   max-width: 1440px;
-  min-width: 320px;
 }
 
 .red-b {
@@ -17,13 +16,14 @@ html {
 }
 
 .container {
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 320px;
 }
 
-header {
+.header {
   width: 100%;
   height: 60px;
   padding: 15px;
@@ -32,7 +32,7 @@ header {
   font-size: 2rem;
 }
 
-main {
+.main {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -42,68 +42,75 @@ main {
 .booking {
   display: flex;
   flex-direction: column;
-  text-align: center;
   width: 100%;
+  align-items: center;
   background: #f7f6f7;
 }
-.booking__location {
+.booking--dark {
+  background: #ebebea;
+}
+.booking__map, .booking__search {
+  width: 320px;
+}
+
+.map {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #ebebea;
   padding: 1rem;
   font-size: 1rem;
-}
-.booking__location p {
-  padding-right: 50px;
   font-weight: bold;
+  position: relative;
 }
-.booking__location .fas {
-  padding-right: 1rem;
+.map__icon {
+  position: absolute;
+  left: 73px;
 }
-.booking__search {
+
+.search {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 1rem;
   align-items: center;
+  justify-content: center;
+  text-align: center;
 }
-.booking__search p:nth-child(1) {
+.search__heading {
   font-weight: bold;
   font-size: 1.5rem;
   padding: 1rem 1rem 1rem 0;
   padding-bottom: 1rem;
 }
-.booking__search p:nth-child(2) {
-  padding-bottom: 1rem;
+.search__text {
   color: #353434;
-  padding-bottom: 1rem;
 }
-.booking__search button {
+.search__button {
   width: 220px;
   padding: 1rem;
-  margin: 1rem;
+  margin: 2rem;
   border: none;
   color: #fff;
   border-radius: 100px;
   background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
 }
 
-.function {
+.check-in {
   display: flex;
   flex-direction: column;
   padding: 1rem;
 }
-.function p:nth-child(1) {
+.check-in__heading {
   font-weight: bold;
   font-size: 1.5rem;
   padding: 1rem 1rem 1rem 0;
 }
-.function__choice {
+.check-in__box {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
-  margin: 1rem;
+  padding: 1rem auto;
+  margin: 1rem auto;
   position: relative;
   width: 280px;
   height: 80px;
@@ -111,7 +118,7 @@ main {
   background: #f7f6f7;
   box-shadow: 5px 5px 10px #ebebea;
 }
-.function__choice span {
+.check-in__order {
   display: inline-flex;
   position: absolute;
   width: 26px;
@@ -121,60 +128,134 @@ main {
   justify-content: center;
   align-items: center;
   left: -13px;
-  transform: translate(50% 50%);
   color: #fff;
 }
-.function__choice .icone {
+.check-in__icon {
   margin-right: 2rem;
   font-size: 1.2rem;
   opacity: 0.6;
 }
-.function__choice p {
+.check-in__text {
   font-weight: bold;
 }
 
 .restaurant {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
-  padding: 1rem;
+  height: 100%;
+  padding: 10px;
   background: #f7f6f7;
-}
-.restaurant__title {
-  margin: 1rem 0;
-  font-weight: bold;
-  font-size: 1.5rem;
-  padding: 1rem 1rem 1rem 0;
 }
 
 .cards {
+  width: 320px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
+}
+.cards__heading {
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding: 1rem 1rem 1rem 0;
+  padding: 1rem;
+}
+.cards__item {
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 .card {
   width: 300px;
+  height: 200px;
+  margin: 0 auto;
+}
+.card__link {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  color: #000;
 }
 .card__image {
   width: 100%;
   object-fit: cover;
   border: 0px solid transparent;
   border-radius: 15px 15px 0 0;
-  flex: 2;
+  height: 65%;
 }
-.card__info {
-  flex: 1;
+.card__content {
+  height: 35%;
   background: #fff;
-  border: 0px solid #fff;
+  border: 1px solid #fff;
   border-radius: 0 0 15px 15px;
-  margin-bottom: 1rem;
+  padding: 0.8rem;
+  position: relative;
+}
+.card__heading {
+  font-size: 1rem;
+  padding-bottom: 0.5rem;
+}
+.card__text {
+  font-size: 14px;
+  line-height: 1.5;
+}
+.card__icon {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 1.3rem;
 }
 
-.link {
-  display: block;
+.footer {
+  width: 100%;
+  background: #000;
+  color: #fff;
+}
+.footer__wrapper {
+  width: 320px;
+  margin: 0 auto;
+  padding: 1rem 0;
+}
+.footer__box {
+  width: 300px;
+  margin: 0 auto;
+}
+.footer__logo {
+  font-family: shrikhand;
+  font-style: italic;
+  font-size: 1.1rem;
+  padding: 1rem 1rem 1rem 0;
+}
+.footer__content {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.9rem;
+}
+
+.submit-restaurant {
+  display: flex;
+  padding: 0.5rem 0.5rem 0.5rem 0;
+}
+.submit-restaurant__text {
+  padding-left: 1rem;
+}
+
+.partnership {
+  display: flex;
+  padding: 0.5rem 0.5rem 0.5rem 0;
+}
+.partnership__text {
+  padding-left: 1rem;
+}
+
+.legal {
+  padding: 0.5rem 0.5rem 0.5rem 0;
+}
+
+.contact {
+  text-decoration: none;
+  color: #fff;
+  padding: 0.5rem 0.5rem 1rem 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
