--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,6 @@ body,
 html {
   font-family: "roboto", sans-serif;
   max-width: 1440px;
-  min-width: 320px;
 }
 
 .red-b {
@@ -22,12 +21,13 @@ html {
 }
 
 .container {
-  width: 100%;
+  width: 100vw;
   @include flex-column;
-  align-items: center
+  align-items: center;
+  min-width: 320px;
 }
 
-header {
+.header {
   width: 100%;
   height: 60px;
   padding: 15px;
@@ -36,146 +36,220 @@ header {
   font-size: 2rem;
 }
 
-main{
+.main {
   width: 100%;
   @include flex-column;
   align-items: center;
 }
 
-
 .booking {
   @include flex-column;
-  text-align: center;
   width: 100%;
+  align-items: center;
   background: $color-bg-light;
-  &__location {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: $color-bg-dark;
-    padding: 1rem;
-    font-size: 1rem;
-    & p {
-      padding-right: 50px;
-      font-weight: bold;
-    }
 
-    & .fas {
-      padding-right: 1rem;
-    }
+  &--dark {
+    background: $color-bg-dark;
   }
-
+  &__map,
   &__search {
-    @include flex-column;
-    padding: 2rem;
-    align-items: center;
-
-    & p:nth-child(1) {
-      @include heading-section;
-      padding-bottom: 1rem;
-    }
-    & p:nth-child(2) {
-      padding-bottom: 1rem;
-      color: #353434;
-      padding-bottom: 1rem;
-    }
-    & button {
-      width: 220px;
-      padding: 1rem;
-      margin: 1rem;
-      border: none;
-      color: #fff;
-      border-radius: 100px;
-      background: linear-gradient(
-        0deg,
-        $color-primary 0%,
-        $color-secondary 100%
-      );
-    }
+    width: 320px;
   }
 }
 
-.function {
+.map {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  position: relative;
+
+  &__icon {
+    position: absolute;
+    left: 73px;
+  }
+}
+
+.search {
   @include flex-column;
   padding: 1rem;
-  & p:nth-child(1) {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  &__heading {
+    @include heading-section;
+    padding-bottom: 1rem;
+  }
+  &__text {
+    color: #353434;
+  }
+  &__button {
+    width: 220px;
+    padding: 1rem;
+    margin: 2rem;
+    border: none;
+    color: #fff;
+    border-radius: 100px;
+    background: linear-gradient(0deg, $color-primary 0%, $color-secondary 100%);
+  }
+}
+
+.check-in {
+  @include flex-column;
+  padding: 1rem;
+  &__heading {
     @include heading-section;
   }
-  &__choice {
+  &__box {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
-    margin: 1rem;
+    padding: 1rem auto;
+    margin: 1rem auto;
     position: relative;
     width: 280px;
     height: 80px;
     border-radius: 20px;
-    // border: 1px solid #000;
     background: $color-bg-light;
     box-shadow: 5px 5px 10px $color-bg-dark;
-    & span {
-      display: inline-flex;
-      position: absolute;
-      width: 26px;
-      height: 26px;
-      border-radius: 50%;
-      background-color: $color-primary;
-      justify-content: center;
-      align-items: center;
-      left: -13px;
-      transform: translate(50% 50%);
-      color: #fff;
-    }
-    & .icone {
-      margin-right: 2rem;
-      font-size: 1.2rem;
-      opacity: 0.6;
-    }
-    & p {
-      font-weight: bold;
-    }
+  }
+  &__order {
+    display: inline-flex;
+    position: absolute;
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    background-color: $color-primary;
+    justify-content: center;
+    align-items: center;
+    left: -13px;
+    color: #fff;
+  }
+  &__icon {
+    margin-right: 2rem;
+    font-size: 1.2rem;
+    opacity: 0.6;
+  }
+  &__text {
+    font-weight: bold;
   }
 }
 
 .restaurant {
-  @include flex-column;
-  align-items: center;
   width: 100%;
-  padding: 1rem;
+  height: 100%;
+  padding: 10px;
   background: $color-bg-light;
-  &__title{
-    margin: 1rem 0;
-    @include heading-section;
-    
-    
-  }
 }
 
 .cards {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
+  width: 320px;
+  @include flex-column;
+  margin: 0 auto;
+
+  &__heading {
+    @include heading-section;
+    padding: 1rem;
+  }
+  &__item {
+    width: 100%;
+    margin-bottom: 1rem;
+
+  }
 }
 .card {
   width: 300px;
+  height: 200px;
+  margin: 0 auto;
+ 
+
+  &__link {
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    @include flex-column;
+    color:#000;
+  }
   &__image {
     width: 100%;
     object-fit: cover;
     border: 0px solid transparent;
     border-radius: 15px 15px 0 0;
-    flex: 2;
+    height: 65%;
   }
-  &__info {
-    flex: 1;
+  &__content {
+    height: 35%;
     background: #fff;
-    border:0px solid #fff;
+    border: 1px solid #fff;
     border-radius: 0 0 15px 15px;
-    margin-bottom: 1rem;
+    padding: .8rem;
+    position: relative;
+  }
+  &__heading {
+    font-size: 1rem;
+    padding-bottom: .5rem;
+  }
+  &__text{
+    font-size:14px ;
+    line-height: 1.5;
+   
+  }
+  &__icon{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.3rem;
   }
 }
 
-.link {
-  display: block;
+
+.footer{
+  width: 100%;
+  background: #000;
+  color: #fff;
+  &__wrapper{
+    width: 320px;
+    margin: 0 auto;
+    padding: 1rem 0;
+  }
+  &__box{
+    width: 300px;
+    margin: 0 auto;
+  }
+  &__logo{
+    font-family:shrikhand;
+    font-style: italic;
+    font-size: 1.1rem;
+    padding: 1rem 1rem 1rem 0;
+  }
+  &__content{
+    @include flex-column;
+    font-size: .9rem;
+  }
+ 
+}
+.submit-restaurant{
+  display: flex;
+  padding: .5rem .5rem .5rem 0;
+  &__text{
+    padding-left: 1rem;
+  }
+}
+.partnership{
+  display: flex;
+  padding: .5rem .5rem .5rem 0;
+  &__text{
+    padding-left: 1rem;
+  }
+}
+.legal{
+  padding: .5rem .5rem .5rem 0;
+}
+.contact{
+  text-decoration: none;
+  color: #fff;
+  padding: .5rem .5rem 1rem 0;
 }
