--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,15 @@ html {
   flex-direction: column;
   align-items: center;
 }
+.main__wrapper {
+  width: 100%;
+  background: #f7f6f7;
+}
+.main__content {
+  width: 320px;
+  margin: 0 auto;
+  position: relative;
+}
 
 .booking {
   display: flex;
@@ -256,6 +265,93 @@ html {
   text-decoration: none;
   color: #fff;
   padding: 0.5rem 0.5rem 1rem 0;
+}
+
+.header-restaurant {
+  display: flex;
+}
+.header-restaurant__logo {
+  width: 100%;
+  text-align: center;
+}
+.header-restaurant__homepage {
+  color: #000;
+  font-size: 1.2rem;
+  padding-left: 1.5rem;
+}
+
+.banner {
+  width: 100%;
+  height: 250px;
+}
+
+.content {
+  position: relative;
+  height: 1300px;
+}
+
+.card-menu {
+  position: absolute;
+  top: 200px;
+  background: #f7f6f7;
+  right: 0;
+  left: 0;
+  border-radius: 50px 50px 0;
+  padding: 1rem 1rem 1rem 1rem;
+}
+.card-menu__restaurant {
+  display: flex;
+  justify-content: space-between;
+  font-family: shrikhand;
+  font-size: 1.5rem;
+  padding: 1rem 0.5rem 1rem 0;
+}
+.card-menu__text {
+  padding: 1rem 0.5rem 1rem 0;
+}
+.card-menu__text::after {
+  content: "";
+  width: 40px;
+  height: 3px;
+  background: #99e2d0;
+  display: block;
+}
+.card-menu__recipe {
+  width: 300px;
+  height: 65px;
+  background: #fff;
+  border-radius: 15px;
+  padding: 0.8rem;
+  margin-bottom: 1rem;
+}
+.card-menu__recipe-heading {
+  font-size: 1rem;
+  font-weight: bold;
+}
+.card-menu__recipe-price {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 0;
+  font-size: 0.8rem;
+}
+.card-menu__recipe-text {
+  width: 230px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.card-menu__price {
+  font-weight: bold;
+}
+
+.add-cart {
+  width: 220px;
+  padding: 1rem;
+  margin: 2rem;
+  border: none;
+  color: #fff;
+  border-radius: 100px;
+  background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
 }
 
 /*# sourceMappingURL=styles.css.map */
