--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 @import "../css/normalize.css";
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -8,7 +10,6 @@
 body,
 html {
   font-family: "roboto", sans-serif;
-  max-width: 1440px;
 }
 
 .red-b {
@@ -17,16 +18,15 @@ html {
 
 .container {
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  max-width: 768px;
   min-width: 320px;
+  margin: 0 auto;
 }
 
 .header {
   width: 100%;
   height: 60px;
-  padding: 15px;
+  padding: 1rem;
   text-align: center;
   font-family: "shrikhand";
   font-size: 2rem;
@@ -36,16 +36,10 @@ html {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 .main__wrapper {
   width: 100%;
   background: #f7f6f7;
-}
-.main__content {
-  width: 320px;
-  margin: 0 auto;
-  position: relative;
 }
 
 .booking {
@@ -58,28 +52,24 @@ html {
 .booking--dark {
   background: #ebebea;
 }
-.booking__map, .booking__search {
-  width: 320px;
-}
 
 .map {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
+  padding: 1rem 2.5rem 1rem 0;
   font-size: 1rem;
   font-weight: bold;
-  position: relative;
 }
-.map__icon {
-  position: absolute;
-  left: 73px;
+.map__text {
+  padding-left: 1rem;
 }
 
 .search {
   display: flex;
   flex-direction: column;
+  width: 100%;
   padding: 1rem;
   align-items: center;
   justify-content: center;
@@ -88,7 +78,7 @@ html {
 .search__heading {
   font-weight: bold;
   font-size: 1.5rem;
-  padding: 1rem 1rem 1rem 0;
+  padding: 1rem;
   padding-bottom: 1rem;
 }
 .search__text {
@@ -105,6 +95,7 @@ html {
 }
 
 .check-in {
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 1rem;
@@ -112,16 +103,17 @@ html {
 .check-in__heading {
   font-weight: bold;
   font-size: 1.5rem;
-  padding: 1rem 1rem 1rem 0;
+  padding: 1rem;
 }
 .check-in__box {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 1rem auto;
+  padding: 0.5rem;
   margin: 1rem auto;
   position: relative;
-  width: 280px;
+  width: 75vw;
+  max-width: 700px;
   height: 80px;
   border-radius: 20px;
   background: #f7f6f7;
@@ -146,26 +138,28 @@ html {
 }
 .check-in__text {
   font-weight: bold;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .restaurant {
   width: 100%;
-  height: 100%;
-  padding: 10px;
+  padding: 1rem;
   background: #f7f6f7;
+}
+.restaurant__heading {
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding: 1rem;
+  padding-left: 0;
 }
 
 .cards {
-  width: 320px;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-}
-.cards__heading {
-  font-weight: bold;
-  font-size: 1.5rem;
-  padding: 1rem 1rem 1rem 0;
-  padding: 1rem;
+  align-items: center;
 }
 .cards__item {
   width: 100%;
@@ -173,7 +167,8 @@ html {
 }
 
 .card {
-  width: 300px;
+  width: 90vw;
+  max-width: 700px;
   height: 200px;
   margin: 0 auto;
 }
@@ -219,15 +214,7 @@ html {
   width: 100%;
   background: #000;
   color: #fff;
-}
-.footer__wrapper {
-  width: 320px;
-  margin: 0 auto;
-  padding: 1rem 0;
-}
-.footer__box {
-  width: 300px;
-  margin: 0 auto;
+  padding: 2rem;
 }
 .footer__logo {
   font-family: shrikhand;
@@ -239,6 +226,9 @@ html {
   display: flex;
   flex-direction: column;
   font-size: 0.9rem;
+}
+.footer__icon {
+  width: 10px;
 }
 
 .submit-restaurant {
@@ -269,15 +259,20 @@ html {
 
 .header-restaurant {
   display: flex;
+  position: relative;
 }
 .header-restaurant__logo {
   width: 100%;
   text-align: center;
+  margin: 0 auto;
 }
 .header-restaurant__homepage {
   color: #000;
   font-size: 1.2rem;
   padding-left: 1.5rem;
+  display: block;
+  position: absolute;
+  top: 50%;
 }
 
 .banner {
@@ -317,7 +312,7 @@ html {
   display: block;
 }
 .card-menu__recipe {
-  width: 300px;
+  width: 100%;
   height: 65px;
   background: #fff;
   border-radius: 15px;
