correction de la page la palette du gout devenue responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,20 +259,18 @@ html {
 
 .header-restaurant {
   display: flex;
-  position: relative;
+  align-items: center;
+  width: 100vw;
+  max-width: 768px;
 }
 .header-restaurant__logo {
-  width: 100%;
+  width: 95%;
   text-align: center;
-  margin: 0 auto;
 }
-.header-restaurant__homepage {
+.header-restaurant__arrow {
   color: #000;
   font-size: 1.2rem;
-  padding-left: 1.5rem;
-  display: block;
-  position: absolute;
-  top: 50%;
+  width: 5%;
 }
 
 .banner {
@@ -282,24 +280,31 @@ html {
 
 .content {
   position: relative;
-  height: 1300px;
+  min-height: 1350px;
 }
 
 .card-menu {
+  width: 100vw;
+  min-width: 320px;
+  max-width: 768px;
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   top: 200px;
   background: #f7f6f7;
   right: 0;
   left: 0;
   border-radius: 50px 50px 0;
-  padding: 1rem 1rem 1rem 1rem;
+  padding: 1rem;
 }
 .card-menu__restaurant {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   font-family: shrikhand;
   font-size: 1.5rem;
-  padding: 1rem 0.5rem 1rem 0;
+  padding: 1rem;
 }
 .card-menu__text {
   padding: 1rem 0.5rem 1rem 0;
@@ -312,7 +317,8 @@ html {
   display: block;
 }
 .card-menu__recipe {
-  width: 100%;
+  width: 80vw;
+  max-width: 700px;
   height: 65px;
   background: #fff;
   border-radius: 15px;
